# Crypto-Investing-System

./: .gitignore  LICENSE  README V1.4.1 Portable.md  README V1.5 Portable.md  README.md
trading-system-codex/: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README_PORTABLE.md  SECURITY.md  docker-compose.yml  portable.env.example  portable_runtime.lock.json  pyproject.toml  requirements-portable.txt  start_portable.bat  start_portable.sh  start_source.bat
trading-system-codex/.github/workflows/: ci.yml
trading-system-codex/alembic/: env.py
trading-system-codex/alembic/versions/: 0001_initial_schema.py  0003_indicator_monitoring.py  0004_structure_recognition.py  0005_structure_scoring_engine.py  0006_signal_outcome.py  0007_page_snapshot_cache.py  0008_computed_dataset_cache.py  0009_strategy_decision.py  0010_strategy_signal_tables.py
trading-system-codex/app/: main.py
trading-system-codex/app/api/: dependencies.py  router.py
trading-system-codex/app/cache/: __init__.py  market_cache.py  shared_query_cache.py
trading-system-codex/app/core/: config.py  db.py  decimal_utils.py  paths.py  rbac.py  schema_compat.py  security.py  timeframes.py
trading-system-codex/app/events/: handlers.py
trading-system-codex/app/integrations/: cn_etf.py  gateio.py  gateio_ws.py
trading-system-codex/app/middleware/: local_only.py
trading-system-codex/app/models/: confidence.py
trading-system-codex/app/monitoring/: __init__.py  defaults.py  loader.py
trading-system-codex/app/quant/: __init__.py  indicators.py
trading-system-codex/app/repositories/: auth_repository.py  event_repository.py  market_repository.py  signal_repository.py
trading-system-codex/app/schemas/: __init__.py  bootstrap.py  etf.py  market.py  strategy.py  structure.py
trading-system-codex/app/services/: alerts_bundle.py  analysis_bundle.py  ashare_etf_quotes.py  auth.py  bootstrap.py  cache_registry.py  chip_structure.py  chip_structure_decision_policy.py  computed_dataset_cache.py  confidence_engine.py  contract_snapshot.py  data_quality.py  divergence.py  etf_quotes.py  eventing.py  final_decision.py  indicator_matrix.py  indicator_monitoring.py  indicators.py  macro_overview.py  market.py  market_data_bundle.py  market_event_sources.py  market_events_feed.py  microstructure.py  monitoring_dashboard.py  monitoring_decision_review.py  monitoring_source_catalog.py  page_cache.py  page_snapshot_cache.py  precompute.py  risk.py  signal_service.py  technical_signal_classifier.py  terminal_summary_engine.py
trading-system-codex/app/static/: main.js  styles-v15.css  styles.css
trading-system-codex/app/templates/: page.html
trading-system-codex/app/web/: router.py
trading-system-codex/app/workers/: __init__.py  indicator_monitor.py  market_event_translation.py  market_events_feed.py  precompute_worker.py  realtime_market.py
trading-system-codex/docs/: CACHE_ARCHITECTURE.md  CHANGELOG.md  OPERATIONS.md  README.md  RELEASE.md  domain-model.md  source-availability-matrix.md
trading-system-codex/docs/archive/: changelog-legacy.md  disclaimer-legacy.md  roadmap-legacy.md
trading-system-codex/runtime_dev/: v155_smoke.json
trading-system-codex/scripts/: audit_local_storage.py  audit_macro_coverage.py  audit_mojibake.py  audit_redundant_workflows.py  audit_release_hygiene.py  audit_repo_cleanup.py  batch_add_macro_indicators.py  build_embedded_python_runtime.py  build_portable_bundle.py  build_release.py  check_proxy_detection.py  check_structure_matrix.py  clean_release.py  clean_workspace.py  create_release_zip.py  cross_check_and_retry.py  db_maintenance.py  dev.ps1  dev_env.ps1  export_macro_seed_cache.py  import_macro_seed_cache.py  normalize_historical_data.py  portable_modules.py  portable_preflight.py  portable_server.py  portable_smoke.py  release_common.py  show_storage.py  smoke_v155.py  sync_portable_local.ps1  tasks.py  verify_macro_never_empty.py  verify_portable_release.py
trading-system-codex/tests/: test_alerts_frontend_chip_structure.py  test_analysis_frontend_static.py  test_ashare_etf_quotes.py  test_bundle_endpoint_resilience.py  test_chip_scale_contract.py  test_chip_structure.py  test_chip_structure_decision_policy.py  test_classic_pattern_detection.py  test_computed_dataset_cache.py  test_confidence_dimensions.py  test_confidence_engine.py  test_data_quality_and_decision.py  test_decision_brief_redesign.py  test_defaults_and_release.py  test_direction_score_scale.py  test_divergence.py  test_final_decision.py  test_frontend_resilience_static.py  test_futures_pressure_gating.py  test_futures_risk.py  test_gateio_adapter.py  test_gateio_rwa_macro_provider.py  test_gateio_ws_parser.py  test_health_import.py  test_indicator_defaults.py  test_indicator_key_aliases.py  test_indicator_monitoring.py  test_indicator_refresh_interval.py  test_knowledge_catalog.py  test_local_mode.py  test_local_storage_audit.py  test_macro_api_sources.py  test_macro_coverage_audit.py  test_macro_never_empty.py  test_macro_overview.py  test_macro_overview_cn_copy.py  test_macro_secret_loader.py  test_market_cache.py  test_market_candle_upsert.py  test_market_event_translation.py  (+50 more)
trading-system-codex/tools/: audit_user_facing_text.py
(+275 files in other folders)
